--- a/css/laptop.css
+++ b/css/laptop.css
@@ -6,7 +6,7 @@
 
 /*css for content 1*/
 .content1 {
-    background: url("./images/bg.jpg") no-repeat;
+    background: url("./images/bg_1.jpg") no-repeat;
     margin-left: 9.5%;
     width: 80%;
     height: 500px;
