--- a/css/cameras.css
+++ b/css/cameras.css
@@ -4,6 +4,10 @@
     width: 80%;
 }
 
+#more {
+    display: none;
+}
+
 @media only screen and (min-width: 600px) {
     .container {
         width: 80%;
